--- a/css/resume.css
+++ b/css/resume.css
@@ -90,7 +90,8 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #d48a6e;
+  /* outline-color: #d48a6e;*/
+  outline-color: rgb(27, 120, 110);
 }
 
 @media (min-width: 992px) {
