--- a/css/resume.css
+++ b/css/resume.css
@@ -52,7 +52,11 @@ p.lead {
   font-weight: 500;
   font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-size: 1.5rem;
-  white-space: pre-wrap;
+  
+}
+
+.mb-3 {
+  white-space: pre;
 }
 
 .social-icons a {
